<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/statusLed" />

    <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
        <Button
	        android:id="@+id/bOn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="15dp"
	        android:text="@string/buttOn" />

	    <Button
	        android:id="@+id/bOff"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buttOff" />
	
	</LinearLayout>

    <Button
        android:id="@+id/bPaired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paired" />

    <Button
        android:id="@+id/bSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search" />

    <ListView
        android:id="@+id/listDevices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </ListView>
    	
</LinearLayout>
